dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/fastaSeqIO.c)
AC_CONFIG_AUX_DIR(config)

AM_INIT_AUTOMAKE(biogrep, 1.0)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.
dnl Replace `main' with a function in -lpthread:
AC_CHECK_LIB(pthread, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h string.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_CHECK_FUNCS(regcomp strerror strstr)

AC_OUTPUT(Makefile src/Makefile)
